# Sauron

./: .gitignore  CMakeLists.txt  DownloadRepos.sh  InstallLog.txt  InstallOpenCV.sh  InstallRequirement.sh  InstallService.sh  UninstallService.sh  extras.md  license.md  readme.md  sauron.service
SerialBridge/: .gitignore  symbolinker.sh
SerialBridge/src/: SerialReceiver.cpp  SerialReceiver.hpp  main.cpp
assets/: BRIO.blend  axis.blend  board.blend  cherry.blend  robot.blend  skybox.blend  tag.blend  toptracker.blend  trackercube.blend
assets/cakes/: cake.blend
assets/robot/: claws.blend  tray.blend
calibration/: Brio  C920 bis  CMakeLists.txt  HD Pro Webcam C920  HD Pro Webcam C920.yaml  HD USB Camera: HD USB Camera  HD USB Camera: HD USB Camera.yaml  Logi 4K Stream Edition.yaml  calibrate.cpp  vi-output, imx219 7-0010.yaml  vi-output, imx219 8-0010.yaml
cmake/: FindArgus.cmake  FindEGL.cmake  FindNVMMAPI.cmake  FindOpenGL.cmake  FindOpenGLES.cmake
gstreamer logs/: buildinfo.txt  fichiers changes.txt  nvarguscamerasrc.txt  nvoverlaysink.txt  nvpipeline.txt  opencvpipeline.txt  v4l2src.txt  videoconvert.txt
gstreamer modules/: eglpipeline.txt  nv-oem-config.sh  nvarguscamerasrc.txt  nveglglessink.txt  nvegltransform.txt  nvvidconv.txt  v4l2src.txt  videoconvert.txt
include/: ArgusCamera.hpp  BoardViz3d.hpp  Calibrate.hpp  Camera.hpp  CameraView.hpp  FisheyeCamera.hpp  FrameCounter.hpp  GlobalConf.hpp  ObjectTracker.hpp  OutputImage.hpp  SerialSender.hpp  TrackedObject.hpp  boardviz.hpp  hsvtest.hpp  math3d.hpp  position.hpp  slam.hpp  trackedobject.hpp
include/Cameras/: ArgusCamera.hpp  Camera.hpp  CameraManager.hpp  VideoCaptureCamera.hpp
include/Overlord/: BaseObjective.hpp  BoardMemory.hpp  Overlord.hpp  RobotHAL.hpp  RobotHandle.hpp  cdfrdefines.hpp
include/Overlord/Collision/: Box.hpp  Matrix22.hpp  Pathfinder.hpp  Vector2d.hpp
include/Overlord/Objectives/: Actuators.hpp  DepositCherries.hpp  GatherCherries.hpp  GoHomeObjective.hpp  GotoObjective.hpp  MakeCake.hpp  RetractClaws.hpp  RetractTray.hpp  TakeStack.hpp  TrayRoutine.hpp
include/Scenarios/: CDFRCommon.hpp  CDFRExternal.hpp  CDFRInternal.hpp
include/TrackedObjects/: ObjectIdentity.hpp  StaticObject.hpp  TopTracker.hpp  TrackedObject.hpp  TrackerCube.hpp
include/data/: Calibfile.hpp  CameraView.hpp  DataPacket.hpp  FVector2D.hpp  FrameCounter.hpp  ImageTypes.hpp  ManualProfiler.hpp  OutputImage.hpp  SerialPacket.hpp  metadata.hpp
include/data/senders/: DataSender.hpp  SerialSender.hpp  WebSender.hpp
include/data/senders/Encoders/: GenericEncoder.hpp  MinimalEncoder.hpp  TextEncoder.hpp
include/data/senders/Transport/: FileTransport.hpp  GenericTransport.hpp  SerialTransport.hpp  TCPTransport.hpp  UDPTransport.hpp
include/visualisation/: BetterWindow.hpp  BoardGL.hpp  BoardViz2D.hpp  BoardViz3D.hpp  GLWindow.hpp
include/visualisation/openGL/: Mesh.hpp  Shader.hpp  Texture.hpp
marker/: CMakeLists.txt  create_marker.cpp
ocv1/: CMakeLists.txt
ocv1/include/: Calibfile.hpp  Calibrate.hpp  Camera.hpp  position.hpp
ocv1/source/: ArucoWebcam.cpp  Calibrate.cpp  Camera.cpp  boardviz.cpp  trackedobject.cpp
source/: ArgusCamera.cpp  BoardViz3d.cpp  Calibrate.cpp  Camera.cpp  CameraView.cpp  FisheyeCamera.cpp  FrameCounter.cpp  Globalconf.cpp  ObjectTracker.cpp  OutputImage.cpp  SerialSender.cpp  TrackedObject.cpp  boardviz.cpp  hsvtest.cpp  main.cpp  mapping.cpp  math3d.cpp  slam.cpp  trackedobject.cpp
source/Cameras/: ArgusCamera.cpp  Camera.cpp  CameraManager.cpp  VideoCaptureCamera.cpp
source/Overlord/: BaseObjective.cpp  BoardMemory.cpp  Overlord.cpp  RobotHAL.cpp  RobotHandle.cpp  cdfrdefines.cpp
source/Overlord/Collision/: Box.cpp  Pathfinder.cpp  Vector2d.cpp
source/Overlord/Objectives/: Actuators.cpp  DepositCherries.cpp  GatherCherries.cpp  GoHomeObjective.cpp  GotoObjective.cpp  MakeCake.cpp  RetractClaws.cpp  RetractTray.cpp  TakeStack.cpp  TrayRoutine.cpp
source/TrackedObjects/: .TrackerCube.cpp  ObjectIdentity.cpp  StaticObject.cpp  TopTracker.cpp  TrackedObject.cpp  TrackerCube.cpp
source/data/: CameraView.cpp  DataPacket.cpp  FrameCounter.cpp  ImageTypes.cpp  ManualProfiler.cpp  OutputImage.cpp  SerialPacket.cpp  metadata.cpp
source/data/senders/: DataSender.cpp  SerialSender.cpp  WebSender.cpp
source/data/senders/Encoders/: GenericEncoder.cpp  MinimalEncoder.cpp  TextEncoder.cpp
source/data/senders/Transport/: FileTransport.cpp  GenericTransport.cpp  SerialTransport.cpp  TCPTransport.cpp  UDPTransport.cpp
source/scenarios/: CDFRCommon.cpp  CDFRExternal.cpp  CDFRInternal.cpp
source/visualisation/: BetterWindow.cpp  BoardGL.cpp  BoardViz2D.cpp  BoardViz3D.cpp  GLWindow.cpp
source/visualisation/openGL/: Mesh.cpp  Shader.cpp  Texture.cpp  fragmentshader.fs  vertexshader.vs
